--- a/src/Components/Auth/SendCod2/SendCod2.module.css
+++ b/src/Components/Auth/SendCod2/SendCod2.module.css
@@ -1,4 +1,4 @@
-
+/* 
 button{
     background-color: #9DA65D!important;
 }
@@ -6,4 +6,4 @@ button{
     border: #8C8C88 2px solid !important;
     box-shadow: 4px 2px 4px #8C8C88 !important ;
    
-}
+} */
