--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 a {
   text-decoration: none !important;
 }
+
+*::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 25px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #626585;
+  border-radius: 25px;
+  outline: 1px solid transparent;
+}
