--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,26 @@ a {
   border-radius: 25px;
   outline: 1px solid transparent;
 }
+
+.video_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.player__wrapper {
+  position: relative;
+}
+
+.player {
+  border: 2px solid #2cbf31;
+  object-fit: cover;
+  padding: 0;
+  margin: 0;
+}
+
+h2 {
+color: #27c985;
+}
