--- a/src/pages/Videos/Video.css
+++ b/src/pages/Videos/Video.css
@@ -1,4 +1,4 @@
-.video_container {
+/* .video_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,7 +16,4 @@
     padding: 0;
     margin: 0;
  }
- 
- h2 {
-  color: #27c985;
- }
+  */
