--- a/src/features/VideoPlayer/style.css
+++ b/src/features/VideoPlayer/style.css
@@ -1,6 +1,6 @@
 .plyr {
   --plyr-color-main: #20a876;
-  --plyr-border-radius: 10px;
+  --plyr-border-radius: 0px;
 
   --plyr-font-family: inherit;
   --plyr-font-weight-regular: 400;
@@ -95,7 +95,7 @@
 
   --plyr-audio-progress-buffered-background: rgba(193, 200, 209, 0.6);
 
-  --plyr-video-progress-buffered-background: rgba(255, 255, 255, 0.25);
+  --plyr-video-progress-buffered-background: #5a6565;
 
   /* Time */
   --plyr-font-size-time: var(--plyr-font-size-small, 13px);
@@ -130,4 +130,32 @@
 
   --plyr-live-button-edge-bg: #dc2626;
   --plyr-live-button-edge-color: #f5f5f5;
+}
+
+.plyr--video .plyr__controls {
+  background-color: #1a262ad7;
+  backdrop-filter: blur(5px);
+  padding: 8px;
+  .plyr__progress {
+    position: absolute;
+    top: -10px;
+    left: 0px;
+    width: 100%;
+    display: flex;
+    .plyr__slider {
+      margin: 0;
+    }
+  }
+  .plyr__volume {
+    flex: 0;
+  }
+}
+.plyr__volume + .plyr__controls__item {
+  margin-left: 4px;
+}
+
+@media (max-width: 767px) {
+  .plyr__time + .plyr__time {
+    display: block;
+  }
 }
