--- a/src/features/VideoPlayer/style.css
+++ b/src/features/VideoPlayer/style.css
@@ -136,26 +136,61 @@
   background-color: #1a262ad7;
   backdrop-filter: blur(5px);
   padding: 8px;
-  .plyr__progress {
-    position: absolute;
-    top: -10px;
-    left: 0px;
-    width: 100%;
-    display: flex;
-    .plyr__slider {
-      margin: 0;
-    }
-  }
+  justify-content: flex-start;
   .plyr__volume {
     flex: 0;
   }
 }
+.plyr__controls .plyr__controls__item:first-child {
+  margin-right: 0;
+}
+.plyr__controls .plyr__progress__container {
+  position: absolute;
+  top: -10px;
+  left: 0px;
+  width: 100%;
+  padding-left: 0;
+  margin-left: 0;
+  .plyr__progress {
+    display: flex;
+    left: -2px;
+    margin-right: 0;
+    .plyr__slider {
+      margin: 0;
+    }
+  }
+}
 .plyr__volume + .plyr__controls__item {
   margin-left: 4px;
+  flex: 0;
 }
-
 @media (max-width: 767px) {
   .plyr__time + .plyr__time {
     display: block;
   }
+}
+
+.vds-slider {
+  /* CSS variables available for customization (defaults shown). */
+  --media-slider-width: 5px;
+  --media-slider-height: 48px;
+
+  --media-slider-track-width: 5px;
+  --media-slider-track-height: 100%;
+  --media-slider-track-bg: rgb(255 255 255 / 0.3);
+  --media-slider-track-fill-bg: var(--media-brand, #f5f5f5);
+  --media-slider-track-border-radius: 2px;
+  --media-slider-focused-track-width: var(--media-slider-track-width);
+  --media-slider-focused-track-height: var(--media-slider-track-height);
+
+  --media-slider-thumb-size: 12px;
+  --media-slider-thumb-border: 1px solid #cacaca;
+  --media-slider-thumb-border-radius: 9999px;
+  --media-slider-thumb-bg: #fff;
+  --media-slider-thumb-transition: opacity 0.2s ease-in, box-shadow 0.2s ease;
+  --media-slider-focused-thumb-size: calc(var(--media-slider-thumb-size) * 1.1);
+  --media-slider-focused-thumb-shadow: 0 0 0 2px hsla(0, 0%, 100%, 0.4);
+}
+
+.vds-volume-slider {
 }
