--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+[multiple]:focus,
+[type="date"]:focus,
+[type="datetime-local"]:focus,
+[type="email"]:focus,
+[type="month"]:focus,
+[type="number"]:focus,
+[type="password"]:focus,
+[type="search"]:focus,
+[type="tel"]:focus,
+[type="text"]:focus,
+[type="time"]:focus,
+[type="url"]:focus,
+[type="week"]:focus,
+input:where(:not([type])):focus,
+select:focus,
+textarea:focus {
+  box-shadow: none;
+}
 a {
   text-decoration: none !important;
 }
@@ -68,7 +87,6 @@ h2 {
       width: 100%;
     }
   }
-
 }
 .PerentHomeSection {
   background-color: rgb(153, 154, 155);
@@ -79,31 +97,29 @@ h2 {
 }
 
 .PerentHomeSection:hover {
-  background-color:#27c985;
+  background-color: #27c985;
 }
 
 .HomeSection {
   position: absolute;
-  bottom: -20%;;
+  bottom: -20%;
   right: -50%;
   color: rgba(252, 244, 244, 0.5);
   transform: rotate(-10deg);
   transition: ease 1s;
 }
-.PerentHomeSection:hover .HomeSection{
+.PerentHomeSection:hover .HomeSection {
   transform: rotate(-50deg);
 }
-.WhoAvatar{
- 
-  transition:  ease 1s;
+.WhoAvatar {
+  transition: ease 1s;
 }
-.WhoAvatar :hover{
+.WhoAvatar :hover {
   transform: scale(1.2);
-  
 }
 /* ///footer///
  */
- .footer {
+.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -120,25 +136,25 @@ h2 {
   height: 100px;
   color: #fff;
 }
-  .loader:before,
-  .loader:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: inherit;
-    height: inherit;
-    border-radius: 50%;
-    transform: rotateX(70deg);
-    animation: 1s spin linear infinite;
-  }
-  .loader:after {
-    color: #27c985;
-    transform: rotateY(70deg);
-    animation-delay: .4s;
-  }
+.loader:before,
+.loader:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: inherit;
+  height: inherit;
+  border-radius: 50%;
+  transform: rotateX(70deg);
+  animation: 1s spin linear infinite;
+}
+.loader:after {
+  color: #27c985;
+  transform: rotateY(70deg);
+  animation-delay: 0.4s;
+}
 
 @keyframes rotate {
   0% {
@@ -161,28 +177,27 @@ h2 {
 @keyframes spin {
   0%,
   100% {
-    box-shadow: .2em 0px 0 0px currentcolor;
+    box-shadow: 0.2em 0px 0 0px currentcolor;
   }
   12% {
-    box-shadow: .2em .2em 0 0 currentcolor;
+    box-shadow: 0.2em 0.2em 0 0 currentcolor;
   }
   25% {
-    box-shadow: 0 .2em 0 0px currentcolor;
+    box-shadow: 0 0.2em 0 0px currentcolor;
   }
   37% {
-    box-shadow: -.2em .2em 0 0 currentcolor;
+    box-shadow: -0.2em 0.2em 0 0 currentcolor;
   }
   50% {
-    box-shadow: -.2em 0 0 0 currentcolor;
+    box-shadow: -0.2em 0 0 0 currentcolor;
   }
   62% {
-    box-shadow: -.2em -.2em 0 0 currentcolor;
+    box-shadow: -0.2em -0.2em 0 0 currentcolor;
   }
   75% {
-    box-shadow: 0px -.2em 0 0 currentcolor;
+    box-shadow: 0px -0.2em 0 0 currentcolor;
   }
   87% {
-    box-shadow: .2em -.2em 0 0 currentcolor;
+    box-shadow: 0.2em -0.2em 0 0 currentcolor;
   }
-
 }
